# short-link-generation-service

./: README.md  alembic.ini  pyproject.toml
app/: database.py  main.py  models.py
app/dependencies/: authorization.py
app/migrations/: env.py
app/migrations/versions/: 01_create_urls_table.py
app/modules/urls/: repository.py  router.py  schemas.py
app/modules/urls/services/: create_url.py  delete_url.py  get_url.py
app/utils/: db_utils.py  init_app.py  logger.py  openapi_config.py  settings.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
